refactor: following을 가져오는 기능에서 FollowDTO.toDTO 사용하여 스트림 매핑 간소화